force-app/main/default/objects/Employee__c/fields/Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_number__c</fullName>
    <inlineHelpText>please provide your phone number</inlineHelpText>
    <label>Mobile number</label>
    <type>Phone</type>
</CustomField>