force-app/main/default/objects/Employee__c/recordTypes/Employees.recordType-meta.xml
<RecordType>
    <fullName>Employees</fullName>
    <active>true</active>
    <label>Employees</label>
</RecordType>