force-app/main/default/objects/Employee__c/validationRules/Age_between_1_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_between_1_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 0  ||  Age__c &gt; 100</errorConditionFormula>
    <errorMessage>Age is not valid, please enter a valid age</errorMessage>
</ValidationRule>