force-app/main/default/objects/Employee__c/validationRules/Hot_to_contact_you_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Hot_to_contact_you_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND( ISPICKVAL( How_to_contact_you__c , &quot;Phone&quot;),  
         ISBLANK( Mobile_number__c )),
    AND( ISPICKVAL( How_to_contact_you__c , &quot;Email&quot;),  
         ISBLANK(  Email__c ))
)</errorConditionFormula>
    <errorMessage>Please provide Phone or Email to proceed</errorMessage>
</ValidationRule>