force-app/main/default/objects/Employee__c/validationRules/Phone_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Mobile_number__c, &quot;\\D*?(\\d\\D*?){10}&quot; ) )</errorConditionFormula>
    <errorDisplayField>Mobile_number__c</errorDisplayField>
    <errorMessage>Please provide a valid Phone number</errorMessage>
</ValidationRule>