force-app/main/default/objects/Employee__c/listViews/Creados_Hoy.listView-meta.xml
<ListView>
    <fullName>Creados_Hoy</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Creados Hoy</label>
</ListView>